Bug 729 - vDSO image bounds miscalculated
Summary: vDSO image bounds miscalculated
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.3.4
: P2 normal
Target Milestone: ---
Assignee: Roland McGrath
URL:
Keywords:
Depends on:
Blocks: libc235
  Show dependency treegraph
 
Reported: 2005-02-16 04:31 UTC by Roland McGrath
Modified: 2018-04-20 13:37 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:
fweimer: security-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland McGrath 2005-02-16 04:31:35 UTC
This trunk change is needed on the 2.3 branch.

2005-01-05  Steven Munroe  <sjmunroe@us.ibm.com>

	* elf/rtld.c (dl_main) [NEED_DL_SYSINFO_DSO]: Insure l_map_end and
	l_text_end are set for a VDSO with a single PT_LOAD entry.
Comment 1 Sourceware Commits 2005-02-16 09:48:05 UTC
Subject: Bug 729

CVSROOT:	/cvs/glibc
Module name:	libc
Branch: 	glibc-2_3-branch
Changes by:	roland@sources.redhat.com	2005-02-16 09:47:39

Modified files:
	elf            : rtld.c 

Log message:
	2005-01-05  Steven Munroe  <sjmunroe@us.ibm.com>
	
	[BZ #729]
	* elf/rtld.c (dl_main) [NEED_DL_SYSINFO_DSO]: Insure l_map_end and
	l_text_end are set for a VDSO with a single PT_LOAD entry.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/elf/rtld.c.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.339&r2=1.339.2.1

Comment 2 Roland McGrath 2005-04-05 23:59:12 UTC
These changes are in the 2.3 branch as well as the trunk now.