2005-01-05  Steven Munroe  <sjmunroe@us.ibm.com>

[BZ #729]
	* elf/rtld.c (dl_main) [NEED_DL_SYSINFO_DSO]: Insure l_map_end and
	l_text_end are set for a VDSO with a single PT_LOAD entry.